# plex-share-current-track

./: README.md  pyproject.toml
plxshare/: app.py  config.py  main.py  plex.py  telegram.py
